ignore DK_dmi_march.csv

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 
 # Folders to ignore
 /bkp/*
+# File too big 500mb
+/data/raw/weather/DK_dmi_march.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
