--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
         args: ['--maxkb=100000'] #  100MB
     -   id: check-case-conflict
     -   id: check-merge-conflict
-    # -   id: end-of-file-fixer
+    -   id: end-of-file-fixer
     -   id: check-docstring-first
     -   id: debug-statements
     -   id: check-yaml
